<resources>
    <string name="app_name">Pizzeria</string>
    <string name="usuario">Usuario</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="text_contrase_a">Contraseña</string>
    <string name="reg_strate">Regístrate</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="textview">TextView</string>
    <string name="color">Color</string>
    <string name="aplicar_color">Aplicar color</string>
    <string name="personalizada">Personalizada</string>
    <string name="predeterminadas">Predeterminadas</string>
    <string name="favorita">Favorita</string>
    <string name="pizza">Pizza</string>
    <string name="pizzas">Pizzas</string>
    <string name="aplicar_cambios">Aplicar Cambios</string>
    <string name="confirmar_pedido">Confirmar pedido</string>
</resources>