<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ctrLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="-12dp"
    tools:layout_editor_absoluteY="0dp">

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="254dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nombre_de_usuario"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/txtContrasenna"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtContrasenna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="21dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/text_contrase_a"
        android:inputType="textPassword"
        android:textColorHint="#757575"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/contrase_a"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtContrasenna"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/usuario"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtNombre"
        app:layout_constraintEnd_toStartOf="@+id/txtNombre" />

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="29dp"
        android:background="#0090FF"
        android:padding="10dp"
        android:text="@string/reg_strate"
        android:textColor="#212121"
        app:layout_constraintStart_toEndOf="@+id/btnIniciarSesion"
        app:layout_constraintTop_toBottomOf="@+id/txtContrasenna" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:background="#0090FF"
        android:padding="10dp"
        android:text="@string/iniciar_sesi_n"
        android:textColor="#212121"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnRegistrarse"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>