<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ctrLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PedidoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="225dp"
        android:layout_height="152dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnFavorita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorita"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnPersonalizada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personalizada"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFavorita" />

        <Button
            android:id="@+id/btnPredeterminadas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/predeterminadas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnPersonalizada" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>